# the-human-model

./: .gitignore  README.md
assets/: asset-manifest.md
docs/: architecture.md  chatbot-telegram-evolution.md  coach-dashboard-v1.md  design-principles.md  documentation-cleanup-notes.md  evidence-map.md  implementation-progress.md  movement-analysis.md  philosophy.md  project-evolution.md  project-log-automation.md  recovery-modeling.md  research-notes.md  roadmap.md  sensing-systems.md  source-context.md  vision.md  why-the-human-model.md
examples/: README.md  bridget_prompt_demo.py  daily_card_demo.py  dashboard_data_shaping_demo.py  media_ingestion_router_demo.py  movement_quality_demo.py  readiness_modeling_demo.py  readiness_scoring_demo.py  source_normalization_demo.py  training_prediction_sheet_demo.py
experiments/: README.md  data-pipeline-ideas.md  imu-notes.md  tracking-concepts.md
reference-implementation/readiness-slice/: .gitignore  README.md  pyproject.toml
reference-implementation/readiness-slice/data/fixtures/: health_export_missing_sleep.json  health_export_recovery_complete.json  health_export_unknown_metric.json
reference-implementation/readiness-slice/readiness_slice/: __init__.py  api.py  config.py  db.py  demo.py  health_import.py  models.py  readiness.py  repository.py  review.py
reference-implementation/readiness-slice/readiness_slice/migrations/: 001_initial.sql
reference-implementation/readiness-slice/tests/: conftest.py  test_api.py  test_health_import.py  test_readiness.py  test_repository.py  test_review.py
(+13 files in other folders)
